assets/main.css
h1 {
	font-family: Quicksand;
	font-size: 24px;
	font-style: normal;
	font-variant: normal;
	font-weight: 500;
	line-height: 26.4px;
}
h3 {
	font-family: Quicksand;
	font-size: 14px;
	font-style: normal;
	font-variant: normal;
	font-weight: 500;
	line-height: 15.4px;
}
p {
	font-family: Quicksand;
	font-size: 14px;
	font-style: normal;
	font-variant: normal;
	font-weight: 400;
	line-height: 20px;
}
blockquote {
	font-family: Quicksand;
	font-size: 21px;
	font-style: normal;
	font-variant: normal;
	font-weight: 400;
	line-height: 30px;
}
pre {
	font-family: Quicksand;
	font-size: 13px;
	font-style: normal;
	font-variant: normal;
	font-weight: 400;
	line-height: 18.5714px;
}
a:link {
    text-decoration: none;
}

a:visited {
    text-decoration: none;
}

a:hover {
    text-decoration: none;
}

a:active {
    text-decoration: none;
}
body {
	font-family: Quicksand;
	color: #414141;
}
#banner_container {
	position: relative;
	z-index:3;
	background-image:url("wbb.png");
	background-repeat:no-repeat;
	width: 100%;
	height: 293px;
	background-size: cover;
	background-position: 50% 50%;
	background-repeat: no-repeat;
	overflow-x: hidden;
	-webkit-background-size: cover;
}
#title_container {
	width: 400px;
	margin: 0 auto;
	margin-top: 70px;
}
.title_h1 {
	line-height: 1.2em;
	text-align: center;
  font-family:lulo-clean-w01-one-bold,sans-serif;
	#font-family: 'Roboto Slab', serif;
	color: #414141;
	font-size: 46px;
	font-weight: bold;
	letter-spacing: 4px;
	text-transform: uppercase;

}
#social_container {
	margin: 0 auto;
	display: inline-block;
	margin-top: 10px;
}

.social_img {
	width: 39px;
	height: 39px;
	object-fit: cover;
	margin-left: 5px;
	margin-right: 5px;
}
#menu_container {
	margin: 0 auto;
	display: inline-block;
	margin-top: 10px;
}
.menu_text {
	font-size: 20px;
	font-weight: bold;
	letter-spacing: 2px;
	color: #414141;
	margin-left: 5px;
	margin-right: 5px;
}
#home_content {
	width: 100%;
	padding: 20px;
	margin: 0 auto;

}
.masonry {
    padding: 0;
    -moz-column-gap: 1.5em;
    -webkit-column-gap: 1.5em;
    column-gap: 1.5em;
    font-size: .85em;
}

.item {
    display: inline-block;
    background: #fff;
    padding: 1em;
    margin: 0 0 1.5em;
    width: 100%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-shadow: 2px 2px 2px 2px #ccc;
}

@media only screen and (min-width: 400px) {
    .masonry {
        -moz-column-count: 1;
        -webkit-column-count: 1;
        column-count: 1;
    }
}

@media only screen and (min-width: 700px) {
    .masonry {
        -moz-column-count: 2;
        -webkit-column-count: 2;
        column-count: 2;
    }
}

@media only screen and (min-width: 900px) {
    .masonry {
        -moz-column-count: 3;
        -webkit-column-count: 3;
        column-count: 3;
    }
}

@media only screen and (min-width: 1100px) {
    .masonry {
        -moz-column-count: 3;
        -webkit-column-count: 3;
        column-count: 3;
    }
}

@media only screen and (min-width: 1280px) {
    .wrapper {
        width: 1260px;
    }
}
.excerpt_container img {
	width: 100%;
}

